[package]
name = "wasm-metric-filter"
version = "0.1.0"
authors = ["Xiaoyang Liu <siujoeng.lau@gmail.com>"]
edition = "2021"
readme = "README.md"
license = "MIT"

[profile.release]
lto = "thin"
opt-level = "s"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
proxy-wasm = "0.2.0"
serde = { version = "1.0.138", default-features = false, features = ["derive"] }
serde_json = "1.0.82"
wasm-bindgen = "0.2.81"
